--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.1",
     "electron": "^1.4.15",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "vue-loader": "^10.2.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1"
