--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron": "^1.4.15",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
     "vue-loader": "^10.2.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1"
