--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "urijs": "^1.18.5",
     "vue": "^2.1.10",
     "vuex": "^2.1.1"
