--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "rebuild": "electron-rebuild && electron-rebuild -w node-obs"
   },
   "dependencies": {
+    "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "urijs": "^1.18.5",
     "vue": "^2.1.10",
     "vue-color": "^2.0.6",
+    "vue-select": "^2.0.0",
     "vuex": "^2.1.1"
   },
   "devDependencies": {
