--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.1.10",
     "vue-color": "^2.0.6",
     "vue-multiselect": "^2.0.0-beta.13",
+    "vuedraggable": "^2.8.5",
     "vuex": "^2.1.1"
   },
   "devDependencies": {
