Go back to using electron IPC

--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
-    "node-ipc": "^8.10.3",
     "urijs": "^1.18.5",
     "vue": "^2.1.10",
     "vue-color": "^2.0.6",
     "vue-multiselect": "2.0.0-beta.13",
     "vuedraggable": "^2.8.5",
     "vuex": "^2.1.1",
+    "webgl-video-renderer": "^0.2.0",
     "yuv-buffer": "^1.0.0",
     "yuv-canvas": "^1.0.0"
   },
