--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "slobs-client",
+  "description": "Streamlabs streaming software",
+  "author": "General Workings, Inc.",
   "version": "0.0.1",
   "main": "main.js",
   "scripts": {
@@ -7,7 +9,8 @@
     "watch": "WEBPACK_DASHBOARD=true webpack-dashboard -- webpack --watch",
     "start": "electron .",
     "extract-libs": "bin/extract_libs.sh",
-    "rebuild": "electron-rebuild && electron-rebuild -w node-obs"
+    "rebuild": "electron-rebuild && electron-rebuild -w node-obs",
+    "package": "node bin/package.js"
   },
   "dependencies": {
     "font-manager": "^0.2.2",
@@ -28,6 +31,7 @@
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.1",
     "electron": "^1.4.15",
+    "electron-builder": "^15.6.2",
     "electron-devtools-installer": "^2.1.0",
     "electron-rebuild": "^1.5.7",
     "less": "^2.7.2",
