get rid of webpack dashboard (doesn't work on windows well)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "main.js",
   "scripts": {
     "compile": "webpack",
-    "watch": "WEBPACK_DASHBOARD=true webpack-dashboard -- webpack --watch",
+    "watch": "webpack --watch",
     "start": "electron .",
     "extract-libs": "bin/extract_libs.sh",
     "rebuild": "electron-rebuild && electron-rebuild -w node-obs"
@@ -35,7 +35,6 @@
     "style-loader": "^0.13.1",
     "vue-loader": "^10.2.0",
     "vue-template-compiler": "^2.1.10",
-    "webpack": "^2.2.1",
-    "webpack-dashboard": "^0.3.0"
+    "webpack": "^2.2.1"
   }
 }
