--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "StreamlabsStreaming",
+  "name": "slobs-client",
   "description": "Streamlabs streaming software",
   "author": "General Workings, Inc.",
   "version": "0.0.1",
