change how we handle packaging, add manual upload scripts, and start stubbing in auto uploading

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,16 @@
             "name": "Launch",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/main.js",
+            "runtimeArgs": [
+                "${workspaceRoot}"
+            ],
             "cwd": "${workspaceRoot}",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
             "windows": {
                 "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
+            },
+            "env": {
+                "SLOBS_FORCE_AUTO_UPDATE": "true"
             }
         }
     ]
