--- a/config/global.ini
+++ b/config/global.ini
@@ -1,4 +1,4 @@
-[General]
+﻿[General]
 LicenseAccepted=true
 LastUpdateCheck=0
 LastVersion=1048578
@@ -31,10 +31,21 @@ ScreenSnapping=false
 CenterSnapping=false
 SourceSnapping=false
 SnapDistance=10.0
-WarnBeforeStartingStream=true
+WarnBeforeStartingStream=false
 WarnBeforeStoppingStream=true
 HideProjectorCursor=true
 ProjectorAlwaysOnTop=true
+outputMode=Advanced
+VBitrate=2000
+StreamEncoder=Software (x264)
+ABitrate=160
+UseAdvanced=true
+EnforceBitrate=true
+Preset=veryfast
+FileNameWithoutSpace=false
+RecQuality=undefined
+RecFormat=undefined
+RecRB=false
 
 [Basic]
 SceneCollection=Untitled
