--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "aws-sdk": "^2.43.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.26.1",
     "electron": "^1.4.15",
     "electron-builder": "^15.6.2",
