--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-vue": "^2.0.1",
     "js-yaml": "^3.8.3",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
