clean up StudioFooter.vue to pass eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,12 @@
     "class-methods-use-this": "off",
     "arrow-parens": "off",
     "comma-dangle": "off",
-    "prefer-rest-params": "off"
+    "prefer-rest-params": "off",
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
+    ]
   }
 }
