Revert "Merge pull request #90 from twitchalerts/stream_confirmation_dialogs"
This reverts commit 43dbe5183f5964aac83afbfd30dc98ae396d10db, reversing
changes made to c6ffe1e3d7f67096c29cd9eb6dbcd88cd3979e35.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,5 @@
 {
   "extends": "airbnb",
-  "parser": "babel-eslint",
   "plugins": [
     "vue"
   ],
@@ -12,12 +11,6 @@
     "class-methods-use-this": "off",
     "arrow-parens": "off",
     "comma-dangle": "off",
-    "prefer-rest-params": "off",
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "devDependencies": true
-      }
-    ]
+    "prefer-rest-params": "off"
   }
 }
