add streamlabs icon (#136)

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "build": {
     "appId": "com.streamlabs.slobs",
     "productName": "Streamlabs OBS",
+    "icon": "images/icon.ico",
     "files": [
       "bundles",
       "node_modules",
