--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
   },
   "devDependencies": {
     "7zip-bin": "^2.0.4",
+    "@types/lodash": "^4.14.64",
+    "@types/node": "^7.0.18",
     "aws-sdk": "^2.43.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.24.1",
@@ -65,14 +68,18 @@
     "js-yaml": "^3.8.3",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "lodash-decorators": "^4.3.1",
     "moment": "^2.17.1",
     "progress": "^2.0.0",
     "style-loader": "^0.13.1",
+    "ts-loader": "^2.0.3",
+    "typescript": "^2.3.2",
     "urijs": "^1.18.5",
     "vue": "^2.1.10",
     "vue-color": "^2.0.6",
     "vue-loader": "^10.2.0",
     "vue-multiselect": "2.0.0-beta.13",
+    "vue-property-decorator": "^5.0.1",
     "vue-template-compiler": "^2.1.10",
     "vuedraggable": "^2.8.5",
     "vuex": "^2.1.1",
