properties patching refactoring (#149)
This is preparing for migration source_properties to GenericForm

all input components from settings/transitions/filters use the same format like in source_properties
all data-patching and all fixes of nodeObs issues now in 2 functions:
obsValuesToInputValues and inputValuesToObsValues

now frontend don't have a strong dependent on nodeObs data format, and this pull request will help us to do less work when nodeObs refactoring will be ready

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "7zip-bin": "^2.0.4",
+    "@types/electron": "^1.4.37",
     "@types/lodash": "^4.14.64",
     "@types/node": "^7.0.18",
     "aws-sdk": "^2.43.0",
