--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "vue-loader": "^10.2.0",
     "vue-multiselect": "2.0.0-beta.13",
     "vue-property-decorator": "^5.0.1",
+    "vue-slider-component": "^2.2.7",
     "vue-template-compiler": "^2.1.10",
     "vuedraggable": "^2.8.5",
     "vuex": "^2.1.1",
