--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "lodash-decorators": "^4.3.1",
     "moment": "^2.17.1",
     "progress": "^2.0.0",
+    "rxjs": "^5.4.0",
     "rimraf": "^2.6.1",
     "spectron": "^3.6.4",
     "style-loader": "^0.13.1",
