add env var for disabling JS logging, and .env file (#185)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
             "windows": {
                 "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
-            }
+            },
+            "envFile": "${workspaceRoot}/.env"
         }
     ]
 }
