Set up appveyor (#200)
* start getting clone of node-obs-prebuild

* add yarn install

* fix node-obs prebuild clone

* fix 64 bit

* get rid of platform

* use x64 for cmake-js

* actually run tests

* try os unstable

* try starting the app without tests

* temporarily disalbe display

* Revert "temporarily disalbe display"

This reverts commit df96441c80a96608f65269024bb3a8898be36a4e.

* try actually running the tests

* use window capture instead of video capture device

* get rid of os unstable

* cache node_modules for CI builds

* go back to video capture device

* node_modules doesn't need to depend on yarn.lock (yarn is smart)

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "cmake-js": {
     "runtime": "electron",
-    "runtimeVersion": "1.6.1"
+    "runtimeVersion": "1.6.1",
+    "arch": "x64"
   },
   "dependencies": {
     "electron-updater": "^1.14.0",
