--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 build: off
 
 cache:
-  - node_modules
+  - node_modules -> package.json
 
 install:
   - git clone git@github.com:twitchalerts/node-obs-prebuild.git node-obs
