--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ cache:
   - node_modules -> package.json
 
 install:
+  - git submodule update --init --recursive
   - git clone git@github.com:twitchalerts/node-obs-prebuild.git node-obs
   - yarn install
   - yarn compile
