--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "electron-updater": "^1.14.0",
     "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
-    "node-libuiohook": "git+ssh://git@github.com/twitchalerts/node-libuiohook.git#7403fe02f71882552ed5fa607cbdd7ab379926ba"
+    "node-libuiohook": "file:./node-libuiohook"
   },
   "devDependencies": {
     "7zip-bin": "^2.0.4",
