--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-vue": "^2.0.1",
+    "file-loader": "^0.11.2",
     "js-yaml": "^3.8.3",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
