--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-plugins/obs-browser-packaged-0.0.4.7z filter=lfs diff=lfs merge=lfs -text
+plugins/obs-browser.7z filter=lfs diff=lfs merge=lfs -text
+plugins/obs-facemask-plugin.7z filter=lfs diff=lfs merge=lfs -text
+*.7z filter=lfs diff=lfs merge=lfs -text
