--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "version": "0.1.2",
   "main": "main.js",
   "scripts": {
-    "compile": "webpack",
-    "watch": "webpack --watch",
+    "compile": "yarn clear && webpack",
+    "watch": "yarn clear && webpack --watch",
     "start": "electron .",
     "rebuild-node-obs": "cd ../node-obs/ && cmake-js build --runtime electron --runtime-version 1.6.1 && rm -rf ../slobs-client/node-obs/ && cp -r ./build/distribute/node-obs/ ../slobs-client/ && cd ../slobs-client && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser.7z -onode-obs/",
     "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser.7z -onode-obs/",
     "package": "rm -rf dist && rm -rf bundles && webpack && build -w --x64 --em.env=production",
     "deploy": "node bin/deploy.js",
-    "test": "ava"
+    "test": "ava",
+    "clear": "rm -rf bundles/media"
   },
   "build": {
     "appId": "com.streamlabs.slobs",
