--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.24.1",
+    "circular-dependency-plugin": "^3.0.0",
     "css-loader": "^0.26.1",
     "electron": "^1.4.15",
     "electron-builder": "^15.6.2",
