--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "lodash-decorators": "^4.3.1",
     "moment": "^2.17.1",
     "progress": "^2.0.0",
+    "progress-bar-webpack-plugin": "^1.10.0",
     "rimraf": "^2.6.1",
     "rxjs": "^5.4.0",
     "spectron": "^3.6.4",
