--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "7zip-bin": "^2.0.4",
+    "@tweenjs/tween.js": "^16.8.0",
     "@types/electron": "^1.4.37",
     "@types/lodash": "^4.14.64",
     "@types/node": "^7.0.18",
