--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "electron .",
     "rebuild-node-obs": "cd ../node-obs/ && cmake-js build --runtime electron --runtime-version 1.6.1 && rm -rf ../slobs-client/node-obs/ && cp -r ./build/distribute/node-obs/ ../slobs-client/ && cd ../slobs-client && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser.7z -onode-obs/",
     "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser.7z -onode-obs/",
-    "package": "rm -rf dist && rm -rf bundles && webpack && build -w --x64 --em.env=production",
+    "package": "rm -rf dist && build -w --x64 --em.env=production",
     "deploy": "node bin/deploy.js",
     "test": "ava",
     "clear": "rm -rf bundles/media"
