Audio settings and resolving circular dependency (#398)
There are several changes in this diff.

Typescript was updated. It forced me to update tsloader and rxjs, because they had some issues with new TS.

Also some bugs with new the Child-Main window architecture was fixed.

SceneItem is no more extends from Source

No more side effects when importing store/index.ts

For dependency injection now we can use the new Inject decorator which works fine with circular dependencies . The old style service: Service = Service.instance now is forbidden, because it caused some unobvious issues with dependencies resolving. I replaced all usages of old Inject decorator with new one.

Default audio sources can be managed via the settings window.

Now app project is 100% Typescript, Hooray!

--- a/package.json
+++ b/package.json
@@ -93,14 +93,15 @@
     "progress": "^2.0.0",
     "progress-bar-webpack-plugin": "^1.10.0",
     "rimraf": "^2.6.1",
-    "rxjs": "^5.4.0",
+    "rxjs": "^5.4.3",
     "spectron": "^3.6.4",
     "style-loader": "^0.13.1",
-    "ts-loader": "^2.0.3",
+    "traverse": "^0.6.6",
+    "ts-loader": "^2.3.2",
     "tslint": "^5.4.2",
     "tslint-config-airbnb": "^5.0.1",
     "tslint-loader": "^3.5.3",
-    "typescript": "^2.3.2",
+    "typescript": "^2.4.2",
     "urijs": "^1.18.5",
     "vue": "^2.1.10",
     "vue-color": "^2.0.6",
