Use new obs-studio API and module format (#387)
* Use new obs-studio API and module format

* Use newer node version closer to what Electron is based on

* Update obs-studio-nan to fix compatibility with older node

* Fix obs-studio-nan data race condition in build scripts

* Update to match obs-studio-nan changes

* Update for new changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "node-libuiohook"]
 	path = node-libuiohook
 	url = git@github.com:twitchalerts/node-libuiohook.git
+[submodule "obs-studio-nan"]
+	path = obs-studio-nan
+	url = git@github.com:twitchalerts/obs-studio-nan.git
