--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "electron-updater": "^1.14.0",
     "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
+    "obs-studio-node": "file:./obs-studio-nan",
     "node-libuiohook": "file:./node-libuiohook",
     "uuid": "^3.0.1"
   },
