Allow user to click a button that will upload a zip of their cache directory to us (#459)
* add cache uploader

* each button on a new line

--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
   },
   "dependencies": {
     "asar": "^0.13.0",
+    "aws-sdk": "^2.43.0",
     "electron-updater": "^1.14.0",
     "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
+    "node-archiver": "^0.3.0",
     "node-libuiohook": "file:./node-libuiohook",
     "obs-studio-node": "file:./obs-studio-nan",
     "rimraf": "^2.6.1",
@@ -69,7 +71,6 @@
     "@types/lodash": "^4.14.64",
     "@types/node": "^7.0.18",
     "ava": "^0.19.1",
-    "aws-sdk": "^2.43.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^6.2.10",
