--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "compile": "yarn clear && webpack",
     "watch": "yarn clear && webpack --watch",
     "start": "electron .",
-    "rebuild-node-obs": "cd ../node-obs/ && cmake-js build --runtime electron --runtime-version 1.6.1 && rm -rf ../slobs-client/node-obs/ && cp -r ./build/distribute/node-obs/ ../slobs-client/ && cd ../slobs-client && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser.7z -onode-obs/",
-    "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser.7z -onode-obs/",
+    "rebuild-node-obs": "cd ../node-obs/ && cmake-js build --runtime electron --runtime-version 1.6.1 && rm -rf ../slobs-client/node-obs/ && cp -r ./build/distribute/node-obs/ ../slobs-client/ && cd ../slobs-client && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1-30-1-1_3-3112-1646-g6c71485.7z -onode-obs/ && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1-30-1-1_3-3112-1646-g6c71485_cef.7z -onode-obs/",
+    "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1-30-1-1_3-3112-1646-g6c71485.7z -onode-obs/ && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1-30-1-1_3-3112-1646-g6c71485_cef.7z -onode-obs/",
     "package": "rm -rf dist && build -w --x64 --em.env=production",
     "deploy": "node bin/deploy.js",
     "test": "ava",
