upgrade to electron 1.7.6 (#483)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Launch",
             "type": "node",
             "request": "launch",
-            "protocol": "legacy",
+            "protocol": "inspector",
             "runtimeArgs": [
                 "${workspaceRoot}"
             ],
