--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "main.js",
   "scripts": {
     "compile": "yarn clear && webpack --progress",
+    "ci:compile": "yarn clear && webpack",
     "watch": "yarn clear && webpack --watch --progress",
     "start": "electron .",
     "rebuild-node-obs": "cd ../node-obs/ && cmake-js build --runtime electron --runtime-version 1.7.7 && rm -rf ../slobs-client/node-obs/ && cp -r ./build/distribute/node-obs/ ../slobs-client/ && cd ../slobs-client && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1-30-1-2_3-3112-1646-g6c71485.7z -onode-obs/ && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1-30-1-1_3-3112-1646-g6c71485_cef.7z -onode-obs/",
