--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "node-libuiohook": "file:./node-libuiohook",
     "obs-studio-node": "file:./obs-studio-nan",
     "rimraf": "^2.6.1",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "vue-popperjs": "^1.2.2"
   },
   "devDependencies": {
     "7zip-bin": "^2.0.4",
