--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "ci:compile": "yarn clear && webpack",
     "watch": "yarn clear && webpack --watch --progress",
     "start": "electron .",
-    "rebuild-node-obs": "cd ../node-obs/ && cmake-js build --runtime electron --runtime-version 1.7.7 && rm -rf ../slobs-client/node-obs/ && cp -r ./build/distribute/node-obs/ ../slobs-client/ && cd ../slobs-client && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1.30.1.2_3.3163.1671.g700dc25.7z -onode-obs/ && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1.30.1.2_3.3163.1671.g700dc25_cef.7z -onode-obs/",
-    "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1.30.1.2_3.3163.1671.g700dc25.7z -onode-obs/ && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser_1.30.1.2_3.3163.1671.g700dc25_cef.7z -onode-obs/",
+    "rebuild-node-obs": "cd ../node-obs/ && cmake-js build --runtime electron --runtime-version 1.7.7 && rm -rf ../slobs-client/node-obs/ && cp -r ./build/distribute/node-obs/ ../slobs-client/ && cd ../slobs-client && node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser-2987-old.7z -onode-obs/",
+    "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser-2987-old.7z -onode-obs/",
     "package": "rm -rf dist && build -w --x64 --em.env=production",
     "deploy": "node bin/deploy.js",
     "test": "ava",
