--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "vue": "^2.1.10",
     "vue-color": "^2.0.6",
     "vue-loader": "^10.2.0",
-    "vue-multiselect": "2.0.0-beta.13",
+    "vue-multiselect": "2.0.3",
     "vue-property-decorator": "^5.0.1",
     "vue-slider-component": "^2.2.7",
     "vue-template-compiler": "^2.1.10",
