--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "slobs-client",
   "description": "Streamlabs streaming software",
   "author": "General Workings, Inc.",
+  "license": "GPL-3.0",
   "version": "0.6.3",
   "main": "main.js",
   "scripts": {
