--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
     "node-libuiohook": "file:./node-libuiohook",
-    "obs-studio-node": "file:./obs-studio-nan",
+    "obs-studio-node": "file:./obs-studio-node",
     "rimraf": "^2.6.1",
     "uuid": "^3.0.1",
     "vue-popperjs": "^1.2.2"
