add script to download and extract node-obs

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
 
 install:
   - git submodule update --init --recursive
-  - git clone https://github.com/stream-labs/node-obs-prebuild.git node-obs
+  - yarn install-node-obs
   - yarn install
   - yarn ci:compile
 
