--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     ],
     "publish": {
       "provider": "generic",
-      "url": "https://s3-us-west-2.amazonaws.com/streamlabs-obs"
+      "url": "https://d1g6eog1uhe0xm.cloudfront.net"
     }
   },
   "ava": {
