--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "package": "rm -rf dist && build -w --x64 --em.env=production",
     "deploy": "node bin/deploy.js",
     "test": "ava",
-    "clear": "rm -rf bundles/media"
+    "clear": "rm -rf bundles/media",
+    "typedoc": "typedoc --out ./docs ./app/services --ignoreCompilerErrors --excludeExternals --json ./docs/docs.json"
   },
   "build": {
     "appId": "com.streamlabs.slobs",
@@ -100,6 +101,8 @@
     "moment": "^2.17.1",
     "progress": "^2.0.0",
     "rxjs": "^5.4.3",
+    "sockjs": "^0.3.19",
+    "sockjs-client": "^1.1.4",
     "spectron": "^3.6.4",
     "style-loader": "^0.13.1",
     "traverse": "^0.6.6",
@@ -107,6 +110,7 @@
     "tslint": "^5.4.2",
     "tslint-config-airbnb": "^5.0.1",
     "tslint-loader": "^3.5.3",
+    "typedoc": "^0.9.0",
     "typescript": "^2.4.2",
     "urijs": "^1.18.5",
     "vue": "^2.1.10",
