Move to backtrace.io

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "archiver": "^2.0.3",
     "asar": "^0.13.0",
     "aws-sdk": "^2.43.0",
-    "bugsplat": "^2.1.5",
+    "backtrace-node": "^0.7.3",
     "electron-updater": "^1.14.0",
     "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
