--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "deploy": "node bin/deploy.js",
     "test": "ava",
     "clear": "rm -rf bundles/media",
-    "typedoc": "typedoc --out ./docs ./app/services --ignoreCompilerErrors --excludeExternals --json ./docs/docs.json"
+    "typedocjson": "typedoc --out ./docs ./app/services --ignoreCompilerErrors --excludeExternals --json ./docs/docs.json",
+    "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --ignoreCompilerErrors --excludePrivate"
   },
   "build": {
     "appId": "com.streamlabs.slobs",
