--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "node-libuiohook": "file:./node-libuiohook",
     "obs-studio-node": "file:./obs-studio-node",
     "rimraf": "^2.6.1",
+    "socket.io-client": "2.0.3",
     "uuid": "^3.0.1",
     "vue-popperjs": "^1.2.2"
   },
@@ -74,6 +75,7 @@
     "7zip-bin": "^2.0.4",
     "@types/lodash": "^4.14.64",
     "@types/node": "^7.0.18",
+    "@types/socket.io-client": "^1.4.31",
     "ava": "^0.19.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.2.3",
