--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slobs-client",
+  "name": "streamlabs-obs",
   "description": "Streamlabs streaming software",
   "author": "General Workings, Inc.",
   "license": "GPL-3.0",
@@ -18,7 +18,7 @@
     "test": "ava",
     "clear": "rm -rf bundles/media",
     "typedocjson": "typedoc --out ./docs ./app/services --ignoreCompilerErrors --excludeExternals --json ./docs/docs.json",
-    "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --ignoreCompilerErrors --excludePrivate"
+    "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --hideGenerator"
   },
   "build": {
     "appId": "com.streamlabs.slobs",
