--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "devDependencies": {
     "7zip-bin": "^2.0.4",
+    "@types/archiver": "^2.0.1",
     "@types/lodash": "^4.14.64",
     "@types/node": "^7.0.18",
     "@types/socket.io-client": "^1.4.31",
