Use backtrace-js in the renderer (#56)

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "asar": "^0.13.0",
     "aws-sdk": "^2.43.0",
     "backtrace-node": "^0.7.3",
+    "backtrace-js": "^0.0.4",
     "electron-updater": "^1.14.0",
     "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
