--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "General Workings, Inc.",
   "license": "GPL-3.0",
   "version": "0.7.2",
+  "env": "production",
   "main": "main.js",
   "scripts": {
     "compile": "yarn clear && webpack --progress",
@@ -26,7 +27,11 @@
     "files": [
       "bundles",
       "node_modules",
-      "!node_modules/obs-studio-node/obs-studio",
+      "!node_modules/obs-studio-node/obs-prebuild",
+      "!node_modules/obs-studio-node/logs",
+      "!node_modules/obs-studio-node/build",
+      "!node_modules/obs-studio-node/scripts",
+      "!node_modules/obs-studio-node/src",
       "vendor",
       "updater/index.html",
       "updater/Updater.js",
