--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deploy": "node bin/deploy.js",
     "test": "ava",
     "clear": "rm -rf bundles/media",
-    "typedoc": "typedoc --out ./docs ./app/services --ignoreCompilerErrors --excludeExternals --json ./docs/docs.json"
+    "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator"
   },
   "build": {
     "appId": "com.streamlabs.slobs",
