--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser-2987-old.7z -onode-obs/",
     "package": "rm -rf dist && build -w --x64 --em.env=production",
     "deploy": "node bin/deploy.js",
+    "release": "yarn install --cwd bin/release && node bin/release",
     "test": "ava",
     "clear": "rm -rf bundles/media",
     "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator"
@@ -69,7 +70,6 @@
   "dependencies": {
     "asar": "^0.13.0",
     "aws-sdk": "^2.43.0",
-    "backtrace-js": "^0.0.4",
     "backtrace-node": "^0.7.3",
     "electron-updater": "^1.14.0",
     "font-manager": "^0.2.2",
@@ -115,6 +115,7 @@
     "lodash-decorators": "^4.3.1",
     "moment": "^2.17.1",
     "progress": "^2.0.0",
+    "raven-js": "^3.20.1",
     "rxjs": "^5.4.3",
     "sockjs": "^0.3.19",
     "sockjs-client": "^1.1.4",
