--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "watch": "yarn clear && webpack --watch --progress",
     "start": "electron .",
     "install-node-obs": "node bin/install-node-obs.js && yarn install-plugins",
-    "rebuild-node-obs": "yarn install --cwd bin/rebuild-node-obs && node bin/rebuild-node-obs/ ../node-obs ./node-obs",
+    "rebuild-node-obs": "yarn install --cwd bin && node bin/rebuild-node-obs.js ../node-obs ./node-obs",
     "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser-2987-old.7z -onode-obs/",
     "package": "rm -rf dist && build -w --x64 --em.env=production",
-    "release": "yarn install --cwd bin/release && node bin/release",
+    "release": "yarn install --cwd bin && node bin/release.js",
     "test": "ava",
     "clear": "rm -rf bundles/media",
     "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator"
