add facemask install script

--- a/bin/package.json
+++ b/bin/package.json
@@ -6,6 +6,7 @@
   "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
+    "7zip-bin": "^2.2.7",
     "aws-sdk": "^2.157.0",
     "cmake-js": "^3.5.0",
     "colors": "^1.1.2",
