--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,8 @@
 build: off
 
-environment:
-  nodejs_version: "7.4.0"
-
 install:
+  - ps: Install-Product node 8
+  - node -v
   - git submodule update --init --recursive
   - yarn install
   - yarn install-node-obs
