add facemask install script (#86)
* add facemask install script

* clean up archives

* add yarn install to install-node-obs script

* install node 8 on appveyor

* remove node -v from appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,7 @@
 build: off
 
-environment:
-  nodejs_version: "7.4.0"
-
 install:
+  - ps: Install-Product node 8
   - git submodule update --init --recursive
   - yarn install
   - yarn install-node-obs
