--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Streamlabs streaming software",
   "author": "General Workings, Inc.",
   "license": "GPL-3.0",
-  "version": "0.7.5",
+  "version": "0.7.6",
   "main": "main.js",
   "scripts": {
     "compile": "yarn clear && webpack --progress",
@@ -14,9 +14,8 @@
     "rebuild-node-obs": "yarn install --cwd bin && node bin/rebuild-node-obs.js ../node-obs ./node-obs",
     "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser-2987-old.7z -onode-obs/",
     "package": "rm -rf dist && build -w --x64 --em.env=production",
-    "deploy": "node bin/deploy.js",
-    "test": "cd test && tsc && ava",
     "release": "yarn install --cwd bin && node bin/release.js",
+    "test": "ava",
     "clear": "rm -rf bundles/media",
     "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator"
   },
@@ -57,8 +56,8 @@
   },
   "ava": {
     "files": [
-      "test-dist/*.js",
-      "test-dist/api/*.js"
+      "test/*.js",
+      "test/api/*.js"
     ],
     "serial": true
   },
@@ -68,7 +67,6 @@
     "arch": "x64"
   },
   "dependencies": {
-    "@types/webdriverio": "^4.8.6",
     "asar": "^0.13.0",
     "aws-sdk": "^2.43.0",
     "backtrace-node": "^0.7.3",
