--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "rimraf": "^2.6.1",
     "socket.io-client": "2.0.3",
     "uuid": "^3.0.1",
+    "vue-draggable-resizable": "^1.5.3",
     "vue-popperjs": "^1.2.2"
   },
   "devDependencies": {
