--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/lodash": "^4.14.64",
     "@types/node": "^8.0.0",
     "@types/socket.io-client": "^1.4.31",
+    "@types/webdriverio": "^4.8.6",
     "archiver": "^2.0.3",
     "ava": "^0.19.1",
     "babel-core": "^6.22.1",
