--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser-2987-old.7z -onode-obs/",
     "package": "rm -rf dist && build -w --x64 --em.env=production",
     "release": "yarn install --cwd bin && node bin/release.js",
-    "test": "ava",
+    "test": "tsc -p test && ava",
     "clear": "rm -rf bundles/media",
     "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator"
   },
@@ -56,8 +56,8 @@
   },
   "ava": {
     "files": [
-      "test/*.js",
-      "test/api/*.js"
+      "test-dist/test/*.js",
+      "test-dist/test/api/*.js"
     ],
     "serial": true
   },
@@ -86,6 +86,7 @@
     "@types/lodash": "^4.14.64",
     "@types/node": "^8.0.0",
     "@types/socket.io-client": "^1.4.31",
+    "@types/webdriverio": "^4.8.6",
     "archiver": "^2.0.3",
     "ava": "^0.19.1",
     "babel-core": "^6.22.1",
