Fix up package.json for node-obs removal
- Removes commands that do this for or with node-obs.
- Updated ignored directories.
- Removed node-obs from extraFiles.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "ci:compile": "yarn clear && webpack",
     "watch": "yarn clear && webpack --watch --progress",
     "start": "electron .",
-    "install-node-obs": "yarn install --cwd bin && node bin/install-node-obs.js && yarn install-plugins",
-    "rebuild-node-obs": "yarn install --cwd bin && node bin/rebuild-node-obs.js ../node-obs ./node-obs",
-    "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser-2987-old.7z -onode-obs/",
+    "install-plugins": "node_modules/7zip-bin-win/x64/7za.exe x plugins/obs-browser-2987-old.7z -onode_modules/obs-studio-node/distribute/",
     "package": "rm -rf dist && build -w --x64 --em.env=production",
     "release": "yarn install --cwd bin && node bin/release.js",
     "test": "tsc -p test && ava",
@@ -31,6 +29,8 @@
       "!node_modules/obs-studio-node/build",
       "!node_modules/obs-studio-node/scripts",
       "!node_modules/obs-studio-node/src",
+      "!node_modules/obs-studio-node/js",
+      "!node_modules/obs-studio-node/resources",
       "vendor",
       "updater/index.html",
       "updater/Updater.js",
@@ -39,7 +39,6 @@
       "obs-api"
     ],
     "extraFiles": [
-      "node-obs",
       "LICENSE",
       "AGREEMENT"
     ],
